solve same card click bug

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css_styles/style.css">
   </head>
   <body>
-    <h1> Welcome to the memory Game!</h1>
-    <h3> Click on any two cards below, If all of your pairs match you win!</h3>
+    <h1> Welcome to the Memory Game!</h1>
+    <h3> Click on any two cards below. If all of your pairs match you win!</h3>
     <div class="board">
   <!--    <div class="flip">
         <div class="face front">
